--- a/loss_predictions.html
+++ b/loss_predictions.html
@@ -71,14 +71,22 @@
                   <pre id="debugLog" class="mt-2 bg-slate-50 border rounded p-2 whitespace-pre-wrap"></pre>
                 </details>
               </div>
-              <div class="flex items-center gap-2">
-                <!-- Disabled by default; becomes enabled once model loads -->
+              <div class="flex items-center gap-3">
+                <!-- Two buttons: Good & Bad -->
                 <button
-                  id="btnExample"
+                  id="btnGood"
                   class="px-3 py-2 rounded bg-pbBlue text-white font-semibold disabled:opacity-50 disabled:cursor-not-allowed"
                   disabled
                 >
-                  Loading model…
+                  Complete Good Cycle
+                </button>
+
+                <button
+                  id="btnBad"
+                  class="px-3 py-2 rounded bg-pbBlue text-white font-semibold disabled:opacity-50 disabled:cursor-not-allowed"
+                  disabled
+                >
+                  Complete Bad Cycle
                 </button>
               </div>
             </div>
@@ -100,30 +108,57 @@
 
             <!-- 5 equal columns on xl so all five cards show on one row -->
             <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-4">
-              <!-- START -->
-              <div class="rounded-xl border p-3">
-                <div class="flex items-center justify-between mb-2">
-                  <h4 class="font-semibold">Start</h4>
-                  <span id="badgeStart" class="text-xs px-2 py-0.5 rounded bg-slate-100 text-slate-700">—</span>
-                </div>
-                <label class="block text-sm mb-1">Datetime</label>
-                <input id="datetime" type="datetime-local" class="w-full border rounded p-2 mb-2" />
-                <label class="block text-sm mb-1">Recipe ID</label>
-                <select id="recipe_id" class="w-full border rounded p-2 mb-2 bg-white">
-                  <option value="">Choose…</option>
-                  <option value="241">241</option>
-                  <option value="244">244</option>
-                  <option value="245">245</option>
-                  <option value="246">246</option>
-                  <option value="247">247</option>
-                </select>
-                <label class="block text-sm mb-1">Gloss Type</label>
-                <input id="gloss_type" type="text" class="w-full border rounded p-2 mb-2" placeholder="e.g. polish_P1" />
-                <label class="block text-sm mb-1">Gloss Amount Target (g/tile)</label>
-                <input id="gloss_amount_target_g_per_tile" type="number" class="w-full border rounded p-2 mb-2" />
-                <label class="block text-sm mb-1">Start Volume</label>
-                <input id="vol_start" type="number" class="w-full border rounded p-2" placeholder="required" />
+            <!-- START -->
+            <div class="rounded-xl border p-4 bg-white shadow-sm">
+              <div class="flex items-center justify-between mb-3">
+                <h4 class="font-semibold text-slate-800">Start</h4>
+                <span id="badgeStart" class="text-xs px-2 py-0.5 rounded bg-slate-100 text-slate-700">—</span>
               </div>
+
+              <!-- Start Volume first -->
+              <label class="block text-sm font-medium mb-1 text-slate-700">Start Volume</label>
+              <input
+                id="vol_start"
+                type="number"
+                class="w-full border border-slate-300 rounded-lg p-2 mb-3 focus:ring-2 focus:ring-pbBlue focus:outline-none"
+                placeholder="Enter starting volume"
+              />
+
+              <label class="block text-sm font-medium mb-1 text-slate-700">Datetime</label>
+              <input
+                id="datetime"
+                type="datetime-local"
+                class="w-full border border-slate-300 rounded-lg p-2 mb-3 focus:ring-2 focus:ring-pbBlue focus:outline-none"
+              />
+
+              <label class="block text-sm font-medium mb-1 text-slate-700">Recipe ID</label>
+              <select
+                id="recipe_id"
+                class="w-full border border-slate-300 rounded-lg p-2 mb-3 bg-white focus:ring-2 focus:ring-pbBlue focus:outline-none"
+              >
+                <option value="">Choose…</option>
+                <option value="241">241</option>
+                <option value="244">244</option>
+                <option value="245">245</option>
+                <option value="246">246</option>
+                <option value="247">247</option>
+              </select>
+
+              <label class="block text-sm font-medium mb-1 text-slate-700">Gloss Type</label>
+              <input
+                id="gloss_type"
+                type="text"
+                class="w-full border border-slate-300 rounded-lg p-2 mb-3 focus:ring-2 focus:ring-pbBlue focus:outline-none"
+                placeholder="e.g. polish_P1"
+              />
+
+              <label class="block text-sm font-medium mb-1 text-slate-700">Gloss Amount Target (g/tile)</label>
+              <input
+                id="gloss_amount_target_g_per_tile"
+                type="number"
+                class="w-full border border-slate-300 rounded-lg p-2 focus:ring-2 focus:ring-pbBlue focus:outline-none"
+              />
+            </div>
 
               <!-- PRESS -->
               <div class="rounded-xl border p-3">
@@ -238,7 +273,8 @@
 
           <!-- CHART -->
           <div class="mt-6 grid grid-cols-12 gap-4">
-            <section class="col-span-12 rounded-2xl border border-slate-200 bg-white shadow-sm p-4 h-[26rem]">
+            <section class="col-span-12 rounded-2xl border border-slate-200 bg-white shadow-sm p-4 pb- h-[30rem]">
+
               <div class="flex items-center justify-between mb-2">
                 <h3 class="text-lg font-semibold text-slate-800">Material Loss Per Stage</h3>
                 <div class="flex items-center gap-3 text-xs text-slate-500">
@@ -252,20 +288,6 @@
               <canvas id="lossLineChart" class="w-full h-full"></canvas>
             </section>
           </div>
-<!-- CHART -->
-<div class="mt-6 grid grid-cols-12 gap-4">
-  <section class="col-span-12 rounded-2xl border border-slate-200 bg-white shadow-sm p-4 h-64 md:h-[24rem]">
-    <div class="flex items-center justify-between mb-2">
-      <h3 class="text-lg font-semibold text-slate-800">Material Loss Per Stage</h3>
-      <div class="flex items-center gap-3 text-xs text-slate-500">
-        <span class="inline-flex items-center gap-1"><span class="w-3 h-3 inline-block rounded-sm" style="background:#16A34A"></span> Actual</span>
-        <span class="inline-flex items-center gap-1"><span class="w-3 h-3 inline-block rounded-sm" style="background:#F4B000"></span> Predicted</span>
-        <span class="inline-flex items-center gap-1"><span class="w-3 h-3 inline-block rounded-sm border border-slate-400" style="background:#fff"></span> Min (dashed)</span>
-      </div>
-    </div>
-    <canvas id="lossLineChart" class="w-full h-full"></canvas>
-  </section>
-</div>
 
           <!-- FLAGS -->
           <section id="flagsPanel" class="mt-4 rounded-2xl border border-slate-200 bg-white shadow-sm p-4 hidden">
@@ -633,6 +655,15 @@ def predict(payload):
     pyodide.FS.writeFile(MODEL_PATH,new Uint8Array(buf));
     await pyodide.runPythonAsync(`load_model("${MODEL_PATH}")`);
     modelLoaded=true; $('statusText').textContent='Model loaded';
+    $('btnGood').disabled = false;
+    $('btnBad').disabled = false;
+
+    document.getElementById('btnGood').disabled = false;
+    document.getElementById('btnBad').disabled = false;
+
+    // Attach click events so they actually trigger predictions
+    document.getElementById('btnGood').addEventListener('click', onGenerate);
+    document.getElementById('btnBad').addEventListener('click', onGenerate);
 
     // Enable the run button now that we're ready
     const runBtn = $('btnExample');
@@ -642,6 +673,8 @@ def predict(payload):
     logDebug(e.toString());
     const runBtn = $('btnExample');
     if (runBtn) { runBtn.disabled = true; runBtn.textContent = 'Model unavailable'; }
+    $('btnGood').disabled = true;
+    $('btnBad').disabled = true;
   }
 }
 
@@ -840,3 +873,8 @@ function initUI(){
 </script>
 </body>
 </html>
+ag
+    predictNow();
+  });
+
+  resetBoot();
