--- a/analytics.html
+++ b/analytics.html
@@ -88,7 +88,7 @@
         <!-- GRID -->
         <div class="mt-4 grid grid-cols-12 gap-4">
           <!-- Line chart -->
-          <section class="col-span-12 xl:col-span-8 rounded-2xl border border-slate-200 bg-white shadow-sm p-4 h-64 md:h-[24rem]">
+          <section class="col-span-12 xl:col-span-8 rounded-2xl border border-slate-200 bg-white shadow-sm p-6 pb-10 h-64 md:h-[26rem]">
             <div class="flex items-center justify-between mb-2">
               <h3 class="text-lg font-semibold text-slate-800">Material Flow per Stage</h3>
               <span class="text-xs text-slate-500">units: ft²</span>
@@ -97,7 +97,7 @@
           </section>
 
           <!-- Stage summaries + final yield -->
-          <section class="col-span-12 xl:col-span-4 rounded-2xl border border-slate-200 bg-white shadow-sm p-4 h-64 md:h-[24rem]">
+          <section class="col-span-12 xl:col-span-4 rounded-2xl border border-slate-200 bg-white shadow-sm p-4 min-h-[24rem] overflow-y-auto">
             <div class="flex items-center justify-between mb-2">
               <h3 class="text-lg font-semibold text-slate-800">Snapshot</h3>
               <span id="dashLoading" class="text-xs text-slate-500">loading…</span>
