--- a/info.html
+++ b/info.html
@@ -99,7 +99,7 @@
 
             <!-- Stages -->
             <section id="process" class="rounded-2xl border bg-white p-6 shadow-sm">
-              <h3 class="text-xl font-semibold mb-4">Process Stages (for newcomers)</h3>
+              <h3 class="text-xl font-semibold mb-4">Process Stages</h3>
 
               <div class="space-y-6">
                 <div>
